--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,8 @@
         "prettier"
     ],
     "rules": {
+        "react/prop-types": 0,
+        "import/prefer-default-export": 0,
         "prettier/prettier": 1,
         "react/jsx-filename-extension": [
             "error",
