--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,9 +6,9 @@
     "extends": [
         "plugin:react/recommended",
         "airbnb",
-        "plugin:@typescript-eslint/recommended",
-        "prettier/@typescript-eslint",
-        "plugin:prettier/recommended"
+        "prettier",
+        "plugin:prettier/recommended",
+        "plugin:@typescript-eslint/recommended"               
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
