--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
         "prettier"
     ],
     "rules": {
+        "no-use-before-define": 0,
         "react/prop-types": 0,
         "import/prefer-default-export": 0,
         "prettier/prettier": 1,
